--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 		"@prisma/client": "~4.2.1",
 		"@tsconfig/recommended": "^1.0.1",
 		"@types/fs-extra": "^9.0.13",
-		"jest-mock-extended": "^2.0.7",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.22.0",
 		"prisma": "^4.2.1",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
