--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"dist"
 	],
 	"scripts": {
-		"prepublish": "tsc"
+		"prepublish": "tsc",
+		"tsc": "tsc --noEmit",
+		"eslint": "eslint ."
 	},
 	"jest": {
 		"testEnvironment": "node"
@@ -56,6 +58,6 @@
 		}
 	},
 	"engines": {
-		"node": ">=14"
+		"node": ">=16"
 	}
 }
