--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
 	// see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
 	"include": ["src"],
 	"compilerOptions": {
-		"lib": ["dom", "esnext"],
+		// "lib": ["dom", "esnext"],
+		"target": "ES2020",
+		"module": "commonjs",
 		"importHelpers": true,
 		// output .d.ts declaration files for consumers
 		"declaration": true,
