--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"dist"
 	],
 	"scripts": {
-		"prepublish": "tsc"
+		"prepublish": "tsc",
+		"tsc": "tsc --noEmit",
+		"eslint": "eslint ."
 	},
 	"jest": {
 		"testEnvironment": "node"
@@ -37,7 +39,9 @@
 		"@prisma/client": "~4.2.1",
 		"@tsconfig/recommended": "^1.0.1",
 		"@types/fs-extra": "^9.0.13",
-		"jest-mock-extended": "^2.0.7",
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.22.0",
 		"prisma": "^4.2.1",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
@@ -54,6 +58,6 @@
 		}
 	},
 	"engines": {
-		"node": ">=14"
+		"node": ">=16"
 	}
 }
